# messaging

./: .clang-format  .clang-format-files  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  build.sh  build_tracy_capture.sh  build_tracy_profiler.sh  clean.sh  code_coverage.sh  configure.sh  configure_g++-11.sh  install.sh  messaging.pc.in  reformat.sh  requirements.md  show_profile.sh  start_tracy_capture.sh  test_descriptions.txt
examples/: CMakeLists.txt  atm_machine.hpp
examples/atm/: CMakeLists.txt  atm_machine.hpp  atm_messages.hpp  bank_machine.hpp  interface_machine.hpp  logger.hpp  main.cpp
examples/logger_showoff/: CMakeLists.txt  main.cpp
examples/task/: CMakeLists.txt  main.cpp
include/messaging/: async.hpp  broadcasting_process.hpp  close_queue.hpp  dispatcher.hpp  dispatcher_base.hpp  naming.hpp  process.hpp  process_manager.hpp  pump.hpp  queue_base.hpp  receiver.hpp  sender.hpp  stop_source.hpp  stop_token.hpp  template_dispatcher.hpp  time.hpp
include/messaging/coroutine/: all.hpp  message_queue.hpp  types.hpp
include/messaging/multithread/: all.hpp  message_queue.hpp  types.hpp
include/util/: algorithm.hpp  allocator.hpp  attributes.hpp  bundle.hpp  chrono_io.hpp  inspect.hpp  lock_free_queue.hpp  logger.hpp  logger_spdlog.hpp  math.hpp  pmte.hpp  pointer_cast.hpp  shared_library.hpp  simulated_clock.hpp  traits.hpp  type_info.hpp  type_list.hpp
src/: messaging__process.cpp  util__allocator.cpp  util__debug.cpp  util__debug_spdlog.cpp  util__logger.cpp  util__logger_spdlog.cpp  util__pmte.cpp  util__simulated_clock.cpp  util__type_info.cpp
tests/: CMakeLists.txt  test_bundle.cpp  test_handler.cpp  test_messaging.cpp  test_messaging_perf.cpp  test_pmte.cpp  test_pmte_traits.cpp  test_pointer_cast.cpp  test_simulated_clock.cpp  test_type_info.cpp  test_visitor.cpp
